manifests/prod/ax/Deployment-ax-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: ax-controller
    app.kubernetes.io/part-of: ax
  name: ax-controller
  namespace: ax-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ax-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ax-controller
    spec:
      containers:
        - args:
            - --redis-addr=ax-redis.ax-system.svc.cluster.local:6379
            - --substrate-endpoint=api.ate-system.svc.cluster.local:443
            - --substrate-authority=api.ate-system.svc
            - --substrate-token-file=/var/run/secrets/ateapi/token
            - --substrate-ca-file=/run/servicedns-ca/trust-bundle.pem
            - --template=default-template
            - --template-atespace=ax-system
          image: de-msa2:2999/mathiswellmann/ax-controller:d8ed0fe38bce@sha256:2960923032ace1791caf3d4e4e3b08287d72e2f1b79c68ffdbf13c976d5a3761
          name: controller
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /var/run/secrets/ateapi
              name: ate-token
              readOnly: true
            - mountPath: /run/servicedns-ca
              name: servicedns-ca
              readOnly: true
      serviceAccountName: ax-controller
      volumes:
        - name: ate-token
          projected:
            defaultMode: 420
            sources:
              - serviceAccountToken:
                  audience: api.ate-system.svc
                  expirationSeconds: 7200
                  path: token
        - name: servicedns-ca
          projected:
            defaultMode: 420
            sources:
              - clusterTrustBundle:
                  labelSelector:
                    matchLabels:
                      podcert.ate.dev/canarying: live
                  path: trust-bundle.pem
                  signerName: servicedns.podcert.ate.dev/identity
