manifests/prod/ax/Deployment-ax-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: ax-redis
    app.kubernetes.io/part-of: ax
  name: ax-redis
  namespace: ax-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ax-redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ax-redis
    spec:
      containers:
        - args:
            - redis-server
            - --appendonly
            - "yes"
            - --appendfsync
            - everysec
          image: redis:7-alpine@sha256:858f009f9709ce576febc734aa78b8f6d624b82571f9ddb6bda4377c833b3499
          name: redis
          ports:
            - containerPort: 6379
              name: redis
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: ax-redis-data
