manifests/prod/ax/Deployment-ax-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: ax-server
    app.kubernetes.io/part-of: ax
  name: ax-server
  namespace: ax-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ax-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ax-server
    spec:
      containers:
        - args:
            - --addr=:8080
            - --redis-addr=ax-redis.ax-system.svc.cluster.local:6379
          image: de-msa2:2999/mathiswellmann/ax-server:d8ed0fe38bce@sha256:ee6239380e42d918b61dc369faf06d76d6a97b85e69bcb15adc179fc6f723b73
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          name: ax-server
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 5
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 64Mi
