manifests/prod/ax/Service-ax-redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: ax-redis
    app.kubernetes.io/part-of: ax
  name: ax-redis
  namespace: ax-system
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  selector:
    app.kubernetes.io/name: ax-redis
