manifests/prod/ax/Service-ax-server.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: h2c
  labels:
    app.kubernetes.io/name: ax-server
    app.kubernetes.io/part-of: ax
  name: ax-server
  namespace: ax-system
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: ax-server
